# vcuda-core

./: CMakeLists.txt  core-config.cmake.in
include/: vcuda.h
include/vcuda/: auto_cast.h  core.h
include/vcuda/core/: nullstream.h
test/: CMakeLists.txt
